(since 85.0 a "!" prefix indicates backward compatibility broke)
(numbers in brackets normally mean the mantis ticket ID)

-- 106.0 --------------------------------------------------------

Lua:
 - allow empty argument for Spring.GetKeyBindings to return all keybindings
 - `firestarter` weapon tag no longer capped at 10000 in defs (which
   becomes 100 in Lua after rescale). Now uncapped.
Maps:
 - New bumpwater params, most of these were just hard-coded values:
    - waveOffsetFactor    (0.0)
		- waveLength          (0.15)
		- waveFoamDistortion  (0.05)
		- waveFoamIntensity   (0.5)
		- causticsResolution  (75.0)
		- causticsStrength    (0.08)

Misc:
 - the `useFootPrintCollisionVolume` unit def tag now takes precedence over the default sphere
   that appears when `collisionVolumeScales` are zero. This means that units no longer have to
   define a bogus custom colvol just to prevent the default sphere.
 - don't warn for archive checksum mismatch if server's checksum is zero
 - 3D and Cubemap .dds textures supported in Lua

-- 105.0 --------------------------------------------------------
Sim:
 - allow resurrecting indestructable features
 - consider partially reclaimed wrecks nonfresh for area-resurrection commands
 ! remove undocumented BeamLaser range modifier (provided 30% extra when fired by mobile units)
 ! remove legacy (COB, though also affecting Lua) hack allowing units with onlyForward weapons to fire regardless of AimWeapon status
 ! remove CMD_SET_WANTED_MAX_SPEED
 - allow CEG trails for crashing aircraft (engine will randomly select from any generators listed in sfxTypes.crashExplosionGenerators)
 - DGun weapontype: allow leading (leadLimit for DGun defaults to 0 instead of -1 for back-compatibility)
 - Rifle weapontype: obey collision flags
 - change default ownerExpAccWeight to 0 for all weapon-types
 - remove salvoError multiplier hack for positional and out-of-los targets
 - add new UnitDef tag "stopToAttack"